--- a/css/less/items.less
+++ b/css/less/items.less
@@ -258,6 +258,19 @@
     position: relative;
     overflow: hidden;
     padding: 4rem 3.2rem;
+    .tile-legends {
+        display: block;
+        margin-top: 3.2rem;
+        margin-left: -15px;
+        margin-right: 0;
+    }
+    .tile-legend {
+        margin-bottom: 12px;
+        font-size: 16px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
     .tile-photo-wrap {
         padding-top: 16px;
         margin-left: auto;
@@ -306,6 +319,38 @@
     }
     .tile-action {
         padding-left: 25px;
+    }
+    .tile-photo-wrap {
+        padding-left: 14px;
+        padding-right: 14px;
+    }
+    .tile-photo {
+        display: block;
+        position: relative;
+    }
+    .tile-photo-title {
+        display: block;
+        width: 25%;
+        text-align: center;
+        height: 30px;
+        line-height: 30px;
+        color: #fff;
+        z-index: 2;
+        font-size: 2rem;
+        font-weight: 600;
+        letter-spacing: -0.02em;
+        margin-top: -15px;
+        position: absolute;
+        top: 58%;
+        left: 0;
+        &.title02 {
+            left: 65%;
+            top: 22%;
+        }
+        &.title03 {
+            top: 86%;
+            left: 52%;
+        }
     }
     ul {
         padding-left: 10px;
@@ -1125,11 +1170,14 @@
     .tile-ico {
         width: 72px;
         height: 72px;
-        margin: 0 0 3.2rem 0;
+        margin: 0 0 2rem 0;
         img {
             left: 0;
             margin-left: 0;
         }
+    }
+    .h6-title {
+        margin-bottom: 12px;
     }
 }
 .item-tile-integration {
@@ -2821,6 +2869,29 @@
         position: absolute;
         background: url(../img/icons/help.svg) center no-repeat;
         background-size: 100% auto;
+    }
+}
+.tile-legend {
+    display: block;
+    position: relative;
+    font-weight: 500;
+    padding: 0 0 0 32px;
+    line-height: 1.4;
+    .tile-legend-color {
+        display: block;
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        top: 0.7em;
+        left: 0;
+        margin-top: -10px;
+        border-radius: 50%;
+        overflow: hidden;
+        line-height: 0;
+        img {
+            display: block;
+            width: 100%;
+        }
     }
 }
 @media (max-width: 1399px) {
