--- a/css/less/content.less
+++ b/css/less/content.less
@@ -1662,6 +1662,11 @@ body.popup-open {
 }
 .main-overview-tiles-box, .main-overview-inner-box {
     padding: var(--main-padding) 0 6.6rem 0;
+    .tile-help {
+        .tile-help-content-wrap {
+            max-width: 40vw;
+        }
+    }
     .items-wrap {
         margin: 0 -1.6rem -3.2rem -1.6rem;
     }
@@ -2849,7 +2854,13 @@ body.popup-open {
         }
     }
     /* --------------------- */
-    
+    .main-overview-tiles-box, .main-overview-inner-box {
+        .tile-help {
+            .tile-help-content-wrap {
+                max-width: 85vw;
+            }
+        }
+    }
     
     .main-tables-box {
         .box-inner-wrap {
