--- a/css/less/inputs.less
+++ b/css/less/inputs.less
@@ -260,11 +260,20 @@ select::-ms-expand {
     }
     &.ico-arrow {
         z-index: 20;
+        width: 4.8rem;
+        height: 4.8rem;
+        margin-top: -2.4rem;
         cursor: pointer;
+        border-radius: 50%;
+        background-color: #fff;
+        box-shadow: 3px 5px 24px rgba(45, 47, 64, 0.08);
         &:before {
-            background-image: url(../img/icons/arrow-slider.png);
+            background-image: url(../img/icons/arrow-slider.svg);
+            background-size: 2.4rem auto;
         }
         &:hover {
+            background-color: #fff;
+            box-shadow: 3px 5px 24px rgba(45, 47, 64, 0.08);
         }
     }
     &.ico-arrow-prev {
