--- a/css/less/structura.less
+++ b/css/less/structura.less
@@ -885,6 +885,8 @@ html {
                 padding-bottom: 16px;
                 width: auto;
                 min-width: 0;
+                display: flex;
+                justify-content: center;
                 &:after, &:before {
                     content: "";
                     display: block;
