--- a/css/less/content.less
+++ b/css/less/content.less
@@ -5,7 +5,6 @@
     padding: 9.2rem 0;
     .main-title-wrap {
         letter-spacing: -0.02em;
-        font-size: 2.8rem;
         color: #575759;
         font-weight: 500;
         margin: 0 auto 9.2rem auto;
@@ -68,6 +67,13 @@
         position: relative;
         overflow: hidden;
         .sl-wrap {
+            &.active {
+                .elm-photo {
+                    &:after {
+                        opacity: 1;
+                    }
+                }
+            }
         }
         .sl-inner-wrap, .sl-video-wrap {
             display: flex;
@@ -115,6 +121,15 @@
             width: 20%;
             display: block;
             margin-bottom: 1.6rem;
+            &.active {
+                .elm-photo {
+                    &:after {
+                        opacity: 1;
+                        border: 4px solid #2169FC;
+                        background-color: fade(#000, 50);
+                    }
+                }
+            }
             &~.sl-wrap {
                 display: block;
             }
@@ -124,6 +139,18 @@
             position: relative;
             overflow: hidden;
             background-color: #151516;
+            &:after {
+                content: "";
+                display: block;
+                position: absolute;
+                top: -1px;
+                bottom: -1px;
+                left: -1px;
+                right: -1px;
+                transition: background-color ease 0.2s;
+                z-index: 4;
+                border-radius: 1.2rem;
+            }
             &:before {
                 padding-top: 55.9%;
             }
@@ -138,7 +165,8 @@
     .item-tile-video {
         .btn-action-ico.ico-play {
             &:before {
-                display: none;
+                //display: none;
+                background-size: 100% auto;
             }
         }
     }
