--- a/css/less/inputs.less
+++ b/css/less/inputs.less
@@ -258,7 +258,7 @@ select::-ms-expand {
             opacity: 0.8;
         }
     }
-    &.ico-arrow {
+    &.ico-arrow, &.ico-nav {
         z-index: 20;
         width: 4.8rem;
         height: 4.8rem;
@@ -276,9 +276,41 @@ select::-ms-expand {
             box-shadow: 3px 5px 24px rgba(45, 47, 64, 0.08);
         }
     }
-    &.ico-arrow-prev {
+    &.ico-arrow-prev, &.ico-nav-prev {
         &:before {
             .t-rotate(180deg);
+        }
+    }
+    &.ico-nav {
+        width: 32px;
+        background-color: #fff;
+        border-radius: 0;
+        height: 84px;
+        box-shadow: none;
+        margin: 0;
+        &:before {
+            filter: brightness(0) grayscale(1);
+        }
+        &:hover {
+            background-color: #fff;
+            box-shadow: none;
+        }
+        &:after {
+            width: 1px;
+            height: 52px;
+            position: absolute;
+            top: 50%;
+            right: 0;
+            margin-top: -26px;
+            background-color: #DDDFE3;
+            left: auto;
+            bottom: auto;
+        }
+    }
+    &.ico-nav-next {
+        &:after {
+            right: auto;
+            left: 0;
         }
     }
     &.ico-menu {
