--- a/css/less/structura.less
+++ b/css/less/structura.less
@@ -128,6 +128,9 @@ html {
     text-align: center;
     padding: 24px 0;
     margin-bottom: 8.2rem;
+    .menu-inner-wrap {
+        position: relative;
+    }
     .main-title-wrap {
         text-align: center;
         color: #1D1D1F;
@@ -178,6 +181,17 @@ html {
         &.active {
             background-color: #F0F2F6;
         }
+    }
+    .button-menu-prev,
+    .button-menu-next {
+        position: absolute;
+        bottom: -15px;
+        left: 0;
+        display: none;
+    }
+    .button-menu-next {
+        left: auto;
+        right: 0;
     }
     a {
         color: inherit;
@@ -587,18 +601,25 @@ html {
     }
 }
 @media (max-width: 1023px) {
+    .header {
+        background-color: #FBFBFD;
+        &+.main-menu-box {
+            padding-top: 0;
+            border-bottom: none;
+            border-top: none;
+            background-color: #FBFBFD;
+        }
+    }
     .main-menu-box {
         //font-size: 12px;
         margin-bottom: 0;
-        .inner-wrap {
-        }
         .menu {
-            justify-content: flex-start;
+            justify-content: center;
             flex-wrap: nowrap;
             width: auto;
             min-width: inherit;
-            padding-left: var(--paddingContainer);
-            padding-right: var(--paddingContainer);
+            padding-left: 32px;
+            padding-right: 32px;
             margin-left: calc(var(--paddingContainer) * -1);
             margin-right: calc(var(--paddingContainer) * -1);
             overflow-y: hidden;
@@ -610,7 +631,23 @@ html {
                 height: 0;
             }
             li {
-                //width: 100px;
+                width: 100px;
+            }
+        }
+        .btn-menu {
+            .button-ico {
+                width: 24px;
+                height: 24px;
+            }
+            .button-title {
+                font-size: 12px;
+            }
+        }
+        .button-menu-prev,
+        .button-menu-next {
+            //display: block;
+            &.active {
+                display: block;
             }
         }
     }
@@ -700,6 +737,7 @@ html {
 @media (max-width: 767px) {
     .main-menu-box {
         .menu {
+            justify-content: flex-start;
             li {
                 //width: 20%;
             }
