--- a/css/style.css
+++ b/css/style.css
@@ -592,6 +592,9 @@ body {
   padding: 24px 0;
   margin-bottom: 8.2rem;
 }
+.main-menu-box .menu-inner-wrap {
+  position: relative;
+}
 .main-menu-box .main-title-wrap {
   text-align: center;
   color: #1D1D1F;
@@ -645,6 +648,17 @@ body {
 }
 .main-menu-box .btn-menu.active {
   background-color: #F0F2F6;
+}
+.main-menu-box .button-menu-prev,
+.main-menu-box .button-menu-next {
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  display: none;
+}
+.main-menu-box .button-menu-next {
+  left: auto;
+  right: 0;
 }
 .main-menu-box a {
   color: inherit;
@@ -1072,18 +1086,27 @@ body {
   }
 }
 @media (max-width: 1023px) {
+  .header {
+    background-color: #FBFBFD;
+  }
+  .header + .main-menu-box {
+    padding-top: 0;
+    border-bottom: none;
+    border-top: none;
+    background-color: #FBFBFD;
+  }
   .main-menu-box {
     margin-bottom: 0;
   }
   .main-menu-box .menu {
-    -ms-flex-pack: start;
-        justify-content: flex-start;
+    -ms-flex-pack: center;
+        justify-content: center;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
     width: auto;
     min-width: inherit;
-    padding-left: var(--paddingContainer);
-    padding-right: var(--paddingContainer);
+    padding-left: 32px;
+    padding-right: 32px;
     margin-left: calc(var(--paddingContainer) * -1);
     margin-right: calc(var(--paddingContainer) * -1);
     overflow-y: hidden;
@@ -1094,6 +1117,20 @@ body {
   .main-menu-box .menu::-webkit-scrollbar {
     width: 0;
     height: 0;
+  }
+  .main-menu-box .menu li {
+    width: 100px;
+  }
+  .main-menu-box .btn-menu .button-ico {
+    width: 24px;
+    height: 24px;
+  }
+  .main-menu-box .btn-menu .button-title {
+    font-size: 12px;
+  }
+  .main-menu-box .button-menu-prev.active,
+  .main-menu-box .button-menu-next.active {
+    display: block;
   }
   .wrap {
     padding-top: 60px;
@@ -1172,6 +1209,10 @@ body {
   }
 }
 @media (max-width: 767px) {
+  .main-menu-box .menu {
+    -ms-flex-pack: start;
+        justify-content: flex-start;
+  }
   .footer .popup-outer-box {
     left: var(--paddingContainer);
     right: var(--paddingContainer);
@@ -9378,7 +9419,8 @@ select::-ms-expand {
 .btn-action-ico.ico-play:hover {
   opacity: 0.8;
 }
-.btn-action-ico.ico-arrow {
+.btn-action-ico.ico-arrow,
+.btn-action-ico.ico-nav {
   z-index: 20;
   width: 4.8rem;
   height: 4.8rem;
@@ -9388,16 +9430,49 @@ select::-ms-expand {
   background-color: #fff;
   box-shadow: 3px 5px 24px rgba(45, 47, 64, 0.08);
 }
-.btn-action-ico.ico-arrow:before {
+.btn-action-ico.ico-arrow:before,
+.btn-action-ico.ico-nav:before {
   background-image: url(../img/icons/arrow-slider.svg);
   background-size: 2.4rem auto;
 }
-.btn-action-ico.ico-arrow:hover {
+.btn-action-ico.ico-arrow:hover,
+.btn-action-ico.ico-nav:hover {
   background-color: #fff;
   box-shadow: 3px 5px 24px rgba(45, 47, 64, 0.08);
 }
-.btn-action-ico.ico-arrow-prev:before {
+.btn-action-ico.ico-arrow-prev:before,
+.btn-action-ico.ico-nav-prev:before {
   transform: rotate(180deg);
+}
+.btn-action-ico.ico-nav {
+  width: 32px;
+  background-color: #fff;
+  border-radius: 0;
+  height: 84px;
+  box-shadow: none;
+  margin: 0;
+}
+.btn-action-ico.ico-nav:before {
+  filter: brightness(0) grayscale(1);
+}
+.btn-action-ico.ico-nav:hover {
+  background-color: #fff;
+  box-shadow: none;
+}
+.btn-action-ico.ico-nav:after {
+  width: 1px;
+  height: 52px;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  margin-top: -26px;
+  background-color: #DDDFE3;
+  left: auto;
+  bottom: auto;
+}
+.btn-action-ico.ico-nav-next:after {
+  right: auto;
+  left: 0;
 }
 .btn-action-ico.ico-menu:after,
 .btn-action-ico.ico-menu:before {
