--- a/css/style.css
+++ b/css/style.css
@@ -5573,6 +5573,35 @@ body {
 /* ----------------------------------- *\
 			content styles
 \* ----------------------------------- */
+.inner-menu-box {
+  text-align: center;
+  color: #4E4E4E;
+  background-color: #fff;
+  padding: 2.4rem 0;
+}
+.inner-menu-box.menu-border {
+  border-bottom: 1px solid #DDDFE3;
+}
+.inner-menu-box .menu {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.inner-menu-box li {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+.inner-menu-box a {
+  display: block;
+  padding: 1.4rem 5.1rem;
+  white-space: nowrap;
+}
+.inner-menu-box a:not(:hover) {
+  color: inherit;
+}
 .main-highlights-box {
   padding: 9.2rem 0;
 }
@@ -8367,6 +8396,9 @@ body.popup-open {
   }
 }
 @media (max-width: 767px) {
+  .inner-menu-box a {
+    padding: 1.4rem 3rem;
+  }
   .main-highlights-box .item-wrap {
     width: 100%;
   }
